member tests are added
